BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Installation_vod__c.object
<CustomObject>
    <description>PMO Tool Kit - used to capture details for Installations (project and non-project) for an Environment</description>
    <fields>
        <fullName>Date_vod__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environment_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>Environment_vod__c</referenceTo>
        <relationshipLabel>Installations</relationshipLabel>
        <relationshipName>Installations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installer_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Installations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes_vod__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release_vod__c</referenceTo>
        <relationshipLabel>Installations</relationshipLabel>
        <relationshipName>Installations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Sign-Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Installation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Installation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>